--- a/public/css/common.css
+++ b/public/css/common.css
@@ -542,6 +542,24 @@ div#signIn_bg {
 
 /*# sourceMappingURL=common.css.map */
 
+div.competitionIconW{
+  width:30px;
+  height:30px;
+  margin-right:20px;
+}
+div.icon_flag{
+  background: url(../img/icon_sprite.png) no-repeat;
+  background-position: -30px 0;
+  background-size: cover;
+
+}
+div.icon_pk{
+  background: url(../img/icon_sprite.png) no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+
+}
+
 @media all and (max-width: 960px){
   div.main{
     flex-direction:column;
